# maya-offsetnode-cl

./: CMakeLists.txt  README.md  offset.cl  offsetNode.cpp
include/: cl_common.h
